# codelatch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PLAN.md
plugin/: hooks.json  plugin.json
src/: config.rs  errors.rs  main.rs
src/cli/: doctor.rs  hook.rs  init.rs  mod.rs  run.rs  service.rs  sessions.rs  start.rs  status.rs  stop.rs
src/daemon/: mod.rs
src/db/: mod.rs
src/models/: envelope.rs
src/plugin/: mod.rs
